--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/Layout.astro'
 
 <Layout title='Welcome to Astro.'>
   <main
-    class='flex text-center items-center flex-col w-full min-h-screen gap-y-2 justify-center mx-auto'
+    class='flex text-center items-center flex-col w-full min-h-screen gap-y-2 justify-center mx-auto max-w-7xl px-4'
   >
     <Button client:visible />
   </main>
