Add and delete images, update button functionality and styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/Layout.astro'
 
 <Layout title='Welcome to Astro.'>
   <main
-    class='flex text-center items-center flex-col w-full min-h-screen gap-y-2 justify-center mx-auto max-w-7xl px-4'
+    class='bg-repeat bg-contain h-screen flex items-center flex-col justify-center bg-gradient-to-b from-rose-200 gap-y-4 to-transparent p-4'
   >
     <Button client:visible />
   </main>
